<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.finos.legend</groupId>
    <artifactId>legend-lite</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Legend Lite</name>
    <description>
        A clean-room implementation of FINOS Legend Engine core.
        100% SQL Push-Down execution against DuckDB and SQLite.
    </description>

    <modules>
        <module>core</module>
        <module>nlq</module>
        <module>pct</module>
        <module>parser-equivalence</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Dependency versions (engine only) -->
        <!-- 1.4.4.0, not 1.5.0.0: DuckDB 1.5.0 returns ZERO rows for
             `SELECT .. FROM (.. WHERE .. LIMIT 1) t WHERE t.c IS NOT NULL`
             over a join chain (also with the optimizer disabled; open
             upstream report duckdb/duckdb#21160 "Issues around LIMIT").
             Witness: NavigationDepthTest first()-then-association. -->
        <duckdb.version>1.4.4.0</duckdb.version>
        <sqlite.version>3.47.1.0</sqlite.version>
        <junit.version>5.11.3</junit.version>
        <archunit.version>1.3.0</archunit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>org.finos.legend</groupId>
                <artifactId>legend-lite-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- ArchUnit (test scope; for core/ wall enforcement) -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
            </dependency>

            <!-- DuckDB JDBC Driver -->
            <dependency>
                <groupId>org.duckdb</groupId>
                <artifactId>duckdb_jdbc</artifactId>
                <version>${duckdb.version}</version>
            </dependency>

            <!-- SQLite JDBC Driver -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>

            <!-- JUnit 5 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                    <!-- THE ENGINE'S TEST CLOCK: legend-engine runs every
                         test JVM under -Duser.timezone=GMT (its root pom's
                         surefire.vm.params) and its goldens were minted
                         there. Without the pin our H2 replay oracle read
                         now() in the machine's LOCAL zone while DuckDB read
                         it in UTC, so a now()-relative golden
                         (testGenerateDateDiffExpressionForH2ForDifferenceIn
                         Days) row-verified only while the two zones shared a
                         calendar date — the migration ratchet moved by one
                         test between 21:00 and midnight local (2026-09-01
                         attribution: two same-tree HEAD sweeps at 877/1696
                         against the pinned 876/1697). One clock, the
                         engine's. -->
                    <configuration>
                        <argLine>-Duser.timezone=GMT</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
